--- a/src/html/WebShortcut/webshortcut.css
+++ b/src/html/WebShortcut/webshortcut.css
@@ -9,5 +9,31 @@ nav ul {
 }
 
 nav ul li {
-  display: inline
+  display: inline;
+  margin-right: 25px;
+}
+
+#filedrag {
+	display: none;
+	font-weight: bold;
+	line-height: 200px;
+	text-align: center;
+	vertical-align: middle;
+	padding: 1em 0;
+	margin: 1em 0;
+	color: #555;
+	border: 2px dashed #555;
+	border-radius: 7px;
+	cursor: default;
+}
+
+#filedrag.hover {
+	color: #f00;
+	border-color: #f00;
+	border-style: solid;
+	box-shadow: inset 0 3px 4px #888;
+}
+
+fieldset {
+  border: 0;
 }
